--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@alexanderolsen/libsamplerate-js": "^2.1.1",
+    "@ant-design/charts": "^2.1.2",
     "antd": "^5.20.0",
     "axios": "^1.7.3",
     "json-server": "^1.0.0-beta.1",
