--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "axios": "^1.7.3",
     "json-server": "^1.0.0-beta.1",
     "react": "^18.3.1",
+    "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0",
     "react-icons": "^5.2.1",
+    "react-router-dom": "^6.26.0",
     "wavesurfer.js": "^7.8.2"
   },
   "devDependencies": {
