--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0",
+    "styled-components": "^6.1.12",
     "wavesurfer.js": "^7.8.2"
   },
   "devDependencies": {
